<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".AddVacancy">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/text_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_name" />


        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_poster_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_title_name"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />

        <TextView
            android:id="@+id/text_title_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/text_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_phone_number" />

        <TextView
            android:id="@+id/text_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="Number not available"
            android:inputType="phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_title_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/text_title_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/text_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_price" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_apartment_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_title_price"
            app:layout_constraintTop_toBottomOf="@+id/text_phone_number" />

        <TextView
            android:id="@+id/text_title_apartment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_apartment_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/text_apartment_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_apartment_type" />

        <TextView
            android:id="@+id/text_apartment_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_apartment_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_title_apartment_type"
            app:layout_constraintTop_toBottomOf="@+id/text_price" />

        <TextView
            android:id="@+id/text_title_apartment_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_apartment_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/text_apartment_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_apartment_address" />

        <TextView
            android:id="@+id/text_apartment_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_apartment_address"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_title_apartment_address"
            app:layout_constraintTop_toBottomOf="@+id/text_apartment_type" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



